--- a/APMA_Final_Project.ipynb
+++ b/APMA_Final_Project.ipynb
@@ -8,8 +8,7 @@
       "provenance": [],
       "collapsed_sections": [
         "kJlddA2Su-VD"
-      ],
-      "toc_visible": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -716,7 +715,7 @@
         "outputId": "183ff071-8c4f-4da3-c2c8-24d331267782",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 607
         }
       },
       "source": [
@@ -1352,38 +1351,111 @@
       "metadata": {
         "id": "mEnB9uGG5Oyx",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "894319b3-31fd-4950-d148-c65eaa80d930"
+        "colab": {}
       },
       "source": [
         "clf = load('random_forest.joblib')\n",
         "clf.score(X_test,y_test)"
       ],
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[Parallel(n_jobs=2)]: Using backend ThreadingBackend with 2 concurrent workers.\n",
-            "[Parallel(n_jobs=2)]: Done  37 tasks      | elapsed:    0.2s\n",
-            "[Parallel(n_jobs=2)]: Done 100 out of 100 | elapsed:    0.6s finished\n"
-          ],
-          "name": "stderr"
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TQyjjQWbl7Jd",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Other Models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xJz6avoml6SN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
         },
+        "outputId": "bb51aefb-15ec-44ba-9851-116e608115c1"
+      },
+      "source": [
+        "from sklearn.ensemble import AdaBoostRegressor, GradientBoostingRegressor\n",
+        "ada_clf = AdaBoostRegressor(n_estimators=100)\n",
+        "gra_clf = GradientBoostingRegressor()\n",
+        "\n",
+        "ada_clf.fit(X_train,y_train)\n",
+        "gra_clf.fit(X_train, y_train)"
+      ],
+      "execution_count": 89,
+      "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8201336413640941"
+              "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
+              "             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n",
+              "             max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+              "             min_impurity_split=None, min_samples_leaf=1,\n",
+              "             min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+              "             n_estimators=100, n_iter_no_change=None, presort='auto',\n",
+              "             random_state=None, subsample=1.0, tol=0.0001,\n",
+              "             validation_fraction=0.1, verbose=0, warm_start=False)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SJEN_DncmA4f",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "4ef84d89-0b39-4fb2-e781-e1b350b1f242"
+      },
+      "source": [
+        "y_pred_ada = ada_clf.predict(X_test)\n",
+        "\n",
+        "r2 = r2_score(y_test, y_pred_ada)\n",
+        "mse = mean_squared_error(y_test, y_pred_ada)\n",
+        "\n",
+        "print('ADABOOST REGRESSOR')\n",
+        "print('ADA R^2 Score (2):' , r2)\n",
+        "print('ADA RMSE Score: ', mse)\n",
+        "\n",
+        "y_pred_gra = gra_clf.predict(X_test)\n",
+        "\n",
+        "r2 = r2_score(y_test, y_pred_gra)\n",
+        "mse = mean_squared_error(y_test, y_pred_gra)\n",
+        "\n",
+        "print('GRADIENT BOOSTING REGRESSOR')\n",
+        "print('GRAD R^2 Score (2):' , r2)\n",
+        "print('GRAD RMSE Score: ', mse)\n",
+        "\n"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ADABOOST REGRESSOR\n",
+            "ADA R^2 Score (2): 0.5462983784309159\n",
+            "ADA RMSE Score:  199619.03490067035\n",
+            "GRADIENT BOOSTING REGRESSOR\n",
+            "GRAD R^2 Score (2): 0.7207114594351609\n",
+            "GRAD RMSE Score:  122880.99992580865\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -1626,7 +1698,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 241
+          "height": 221
         },
         "outputId": "c8f7ff3d-0b25-421e-80c8-fdec4128018a"
       },
@@ -1962,7 +2034,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 204
         },
         "outputId": "26373e12-65dc-411f-ae49-9139ef9b78d2"
       },
@@ -2308,7 +2380,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 607
         },
         "outputId": "63c40ce3-cdbc-4b6e-96e2-2a6fb1513589"
       },
@@ -2457,14 +2529,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H76Ev6Tfa-lH",
+        "id": "gsMD0OXvdIRR",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "test['prediction'] = predictions\n",
-        "\n",
-        "test.to_csv('gdrive/My Drive/time_predictions.csv')"
+        "prediction_csv = pd.DataFrame({'predictions' : predictions})\n",
+        "prediction_csv.to_csv('gdrive/My Drive/time_predictions.csv')"
       ],
       "execution_count": 0,
       "outputs": []
