--- a/APMA_Final_Project.ipynb
+++ b/APMA_Final_Project.ipynb
@@ -1309,7 +1309,14 @@
     "id": "TQyjjQWbl7Jd"
    },
    "source": [
-    "### Other Models"
+    "### Other Models (ADABoost and XGBoost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initializing Ada and XGBoost"
    ]
   },
   {
@@ -1405,7 +1412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see from comparison with two other decision tree models, adaboost and gradient boosting. We use both with 100 estimators, equivalent to the random forest regressor. While both models took significantly less time to train, the $R^2$ scores for each are lower, as well as the RMSE scores. We used two non-parametric models to simplify the use of long/lat values without having to convert them to angles. As mentioned with the discussion of the haversine distance, converting to angles directly could be difficult given that Manhattan and the NYC area is at an angle to true north. Furthermore, elements like hour of day become more difficult to model with a parametric model, since there is both a linear (the later the hour from 4PM to 7PM results in more traffic) and non-linear (difference in traffic between 9AM and 10AM is dramatic). To be able to model these non-linear relationships, we chose a parametric model. We then used a few different types of non-parametric models, and found the above results. The random forest classifier gives us a high $R^2$ value, approximately 0.8"
+    "As we can see from comparison with two other decision tree models, ADABoost and XGBoost. We use both with 100 estimators, equivalent to the random forest regressor. While both models took significantly less time to train, the $R^2$ scores for each are lower, as well as the RMSE scores. We used two non-parametric models to simplify the use of long/lat values without having to convert them to angles. As mentioned with the discussion of the haversine distance, converting to angles directly could be difficult given that Manhattan and the NYC area is at an angle to true north. Furthermore, elements like hour of day become more difficult to model with a parametric model, since there is both a linear (the later the hour from 4PM to 7PM results in more traffic) and non-linear (difference in traffic between 9AM and 10AM is dramatic). To be able to model these non-linear relationships, we chose a parametric model. We then used a few different types of non-parametric models, and found the above results. The random forest classifier gives us a high $R^2$ value, approximately 0.8"
    ]
   },
   {
